// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCallOut is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPanel euiPanel--primary euiCallOut testClass1 testClass2 emotion-euiPanel-none-primary-euiCallOut-primary-euiTestCss"
  data-size="m"
  data-test-subj="test subject string"
  data-type="neutral"
  style="--euiCallOutTypeColor: #0B64DD;"
>
  <div
    class="css-tc1q32-wrapper"
  >
    <div
      class="css-wlziyu-body"
    >
      <span
        class="css-19b7t2f-icon"
        data-euiicon-type="info"
      />
      <div
        class="css-qvenhi-content"
      >
        <div
          class="euiCallOut__additionalContent"
        >
          Content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiCallOut props heading h1 is rendered 1`] = `
<div
  class="euiPanel euiPanel--primary euiCallOut emotion-euiPanel-none-primary-euiCallOut-primary"
  data-size="m"
  data-type="neutral"
  style="--euiCallOutTypeColor: #0B64DD;"
>
  <div
    class="css-tc1q32-wrapper"
  >
    <div
      class="css-wlziyu-body"
    >
      <span
        class="css-19b7t2f-icon"
        data-euiicon-type="info"
      />
      <div
        class="css-qvenhi-content"
      />
    </div>
  </div>
</div>
`;

exports[`EuiCallOut props heading h2 is rendered 1`] = `
<div
  class="euiPanel euiPanel--primary euiCallOut emotion-euiPanel-none-primary-euiCallOut-primary"
  data-size="m"
  data-type="neutral"
  style="--euiCallOutTypeColor: #0B64DD;"
>
  <div
    class="css-tc1q32-wrapper"
  >
    <div
      class="css-wlziyu-body"
    >
      <span
        class="css-19b7t2f-icon"
        data-euiicon-type="info"
      />
      <div
        class="css-qvenhi-content"
      />
    </div>
  </div>
</div>
`;

exports[`EuiCallOut props heading h3 is rendered 1`] = `
<div
  class="euiPanel euiPanel--primary euiCallOut emotion-euiPanel-none-primary-euiCallOut-primary"
  data-size="m"
  data-type="neutral"
  style="--euiCallOutTypeColor: #0B64DD;"
>
  <div
    class="css-tc1q32-wrapper"
  >
    <div
      class="css-wlziyu-body"
    >
      <span
        class="css-19b7t2f-icon"
        data-euiicon-type="info"
      />
      <div
        class="css-qvenhi-content"
      />
    </div>
  </div>
</div>
`;

exports[`EuiCallOut props heading h4 is rendered 1`] = `
<div
  class="euiPanel euiPanel--primary euiCallOut emotion-euiPanel-none-primary-euiCallOut-primary"
  data-size="m"
  data-type="neutral"
  style="--euiCallOutTypeColor: #0B64DD;"
>
  <div
    class="css-tc1q32-wrapper"
  >
    <div
      class="css-wlziyu-body"
    >
      <span
        class="css-19b7t2f-icon"
        data-euiicon-type="info"
      />
      <div
        class="css-qvenhi-content"
      />
    </div>
  </div>
</div>
`;

exports[`EuiCallOut props heading h5 is rendered 1`] = `
<div
  class="euiPanel euiPanel--primary euiCallOut emotion-euiPanel-none-primary-euiCallOut-primary"
  data-size="m"
  data-type="neutral"
  style="--euiCallOutTypeColor: #0B64DD;"
>
  <div
    class="css-tc1q32-wrapper"
  >
    <div
      class="css-wlziyu-body"
    >
      <span
        class="css-19b7t2f-icon"
        data-euiicon-type="info"
      />
      <div
        class="css-qvenhi-content"
      />
    </div>
  </div>
</div>
`;

exports[`EuiCallOut props heading h6 is rendered 1`] = `
<div
  class="euiPanel euiPanel--primary euiCallOut emotion-euiPanel-none-primary-euiCallOut-primary"
  data-size="m"
  data-type="neutral"
  style="--euiCallOutTypeColor: #0B64DD;"
>
  <div
    class="css-tc1q32-wrapper"
  >
    <div
      class="css-wlziyu-body"
    >
      <span
        class="css-19b7t2f-icon"
        data-euiicon-type="info"
      />
      <div
        class="css-qvenhi-content"
      />
    </div>
  </div>
</div>
`;

exports[`EuiCallOut props heading p is rendered 1`] = `
<div
  class="euiPanel euiPanel--primary euiCallOut emotion-euiPanel-none-primary-euiCallOut-primary"
  data-size="m"
  data-type="neutral"
  style="--euiCallOutTypeColor: #0B64DD;"
>
  <div
    class="css-tc1q32-wrapper"
  >
    <div
      class="css-wlziyu-body"
    >
      <span
        class="css-19b7t2f-icon"
        data-euiicon-type="info"
      />
      <div
        class="css-qvenhi-content"
      />
    </div>
  </div>
</div>
`;
